[gd_scene load_steps=11 format=2]

[ext_resource path="res://shadow/big_shadow.png" type="Texture" id=1]
[ext_resource path="res://zombies/images/zom.png" type="Texture" id=2]
[ext_resource path="res://zombies/zombies.gd" type="Script" id=3]
[ext_resource path="res://zombies/hitbox.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 12.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -33 ), Vector2( 0, -33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 150.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 27 )

[sub_resource type="CircleShape2D" id=6]
radius = 20.0

[node name="zombies" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="body" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, -26 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="visibility" type="Area2D" parent="."]
visible = false
z_index = -2
collision_layer = 0
collision_mask = 2

[node name="area" type="CollisionShape2D" parent="visibility"]
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="visibility"]
enabled = true
cast_to = Vector2( 0, 150 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -29 )
shape = SubResource( 5 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -30 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = -34.4957
margin_top = -80.7071
margin_right = 34.5043
margin_bottom = -66.7071
text = "1000/1000"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="visibility" to="." method="_on_visibility_area_entered"]
[connection signal="area_exited" from="visibility" to="." method="_on_visibility_area_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="hitbox" to="hitbox" method="_on_hitbox_area_entered"]
